# d365-bp-manager

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  read.rs  write.rs
